# breeze-icons

icons/: CMakeLists.txt
icons-dark/: CMakeLists.txt
src/lib/: CMakeLists.txt
